# istream_block_iterator

./: CMakeLists.txt  Dockerfile  README.md  run.sh
.github/workflows/: cmake.yml
include/: istream_block.h
test/: istream_iter_test.cpp
